[project]
name = "kurotori-avatar-exporter"
version = "1.1.0"
description = "Kurotori Avatar Exporter の Extension 開発環境定義"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
# Blender 本体を起動しない検証でも bpy 参照を解決できるようにする。
dev = [
    "basedpyright==1.38.2",
    "fake-bpy-module-4-2",
    "ruff==0.15.6",
]

[tool.uv]
# Blender Extension のソース管理が目的で、Python パッケージ配布は行わない。
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# 既存の Blender Extension 形式を保ったまま、実害の大きい構文系の問題を検出する。
select = ["E", "F", "W"]
ignore = ["E402", "E501"]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.12"
reportMissingModuleSource = false
reportAttributeAccessIssue = false
reportInvalidTypeForm = false
reportOptionalMemberAccess = false
